--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>VueJS + Expres Template</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Assemblyre</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
-  <div id="app"></div>
-  <script src="build.js"></script>
+    <div id="app"></div>
 </body>
+
 </html>
